--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lets Connect SA</title>
-    <link rel="stylesheet" href="/css/LetsConnect.css">
+    <link rel="stylesheet" href="css/LetsConnect.css">
     <link rel="stylesheet" href="https://use.typekit.net/uek8gvt.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
     <!-- Logo -->
     <div class="nav-left">
       <a href="/Index.html">
-      <img src="/media/logo&branding/SVG/Asset 7.svg" alt="Logo" class="logo"></a>
+      <img src="media/logo&branding/SVG/Asset 7.svg" alt="Logo" class="logo"></a>
     </div>
 
     <!-- Navigation Links -->
