--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 
     <!-- Navigation Links -->
     <ul class="nav-links">
-      <li><a href="/Electrical/index.html">Electrical</a></li>
-      <li><a href="/Security/index.html">Security</a></li>
-      <li><a href="/Data/index.html">Data</a></li>
-      <li><a href="/AC/index.html">A/C</a></li>
-      <li><a href="/Solar/index.html">Solar</a></li>
+      <li><a href="Electrical/index.html">Electrical</a></li>
+      <li><a href="Security/index.html">Security</a></li>
+      <li><a href="Data/index.html">Data</a></li>
+      <li><a href="AC/index.html">A/C</a></li>
+      <li><a href="Solar/index.html">Solar</a></li>
     </ul>
 
     <!-- Contact Icons -->
     <div class="nav-icons">
-      <a href="/Contact/index.html" class="icon-link button-style" title="Contact Form">Contact</a>
+      <a href="Contact/index.html" class="icon-link button-style" title="Contact Form">Contact</a>
       <div class="contact-p-container">
         <h3 class="icon-link">0400000000</h3>
         <h3 class="icon-link">0400000000</h3>
@@ -44,27 +44,27 @@
         <div class="close-btn">×</div>
         <div class="bgr-content">
           <div class="bgr-contact">
-            <img class="bgr-logo" src="/media/logo&branding/SVG/Asset 7.svg" alt="">
+            <img class="bgr-logo" src="media/logo&branding/SVG/Asset 7.svg" alt="">
             <ul>
               <!-- Social Links -->
               <li>
-                <a href="#"><img src="/Media/icons/icons8-facebook.svg" alt="Facebook"><span>Facebook</span></a>
+                <a href="#"><img src="media/icons/icons8-facebook.svg" alt="Facebook"><span>Facebook</span></a>
               </li>
               <li>
-                <a href="#"><img src="/Media/icons/icons8-instagram.svg" alt="Instagram"><span>Instagram </span></a>
+                <a href="#"><img src="media/icons/icons8-instagram.svg" alt="Instagram"><span>Instagram </span></a>
               </li>
 
               <!-- Contact Info -->
               <li>
-                <img src="/Media/icons/reshot-icon-phone-XVG9DMYSLJ (1).svg" alt="Phone Icon">
+                <img src="Media/icons/reshot-icon-phone-XVG9DMYSLJ (1).svg" alt="Phone Icon">
                 <span>P:0400000000</span>
               </li>
               <li>
-                <img src="/Media/icons/reshot-icon-phone-XVG9DMYSLJ (1).svg" alt="Phone Icon">
+                <img src="Media/icons/reshot-icon-phone-XVG9DMYSLJ (1).svg" alt="Phone Icon">
                 <span>P:0400000000</span>
               </li>
               <li>
-                <img src="/Media/icons/reshot-icon-email-P9WA8LS724.svg" alt="Email Icon">
+                <img src="Media/icons/reshot-icon-email-P9WA8LS724.svg" alt="Email Icon">
                 <span>contact@Letsconnectsa.com</span>
               </li>
             </ul>
@@ -127,12 +127,12 @@
  <main>
   <section class="hero-section">
     <div class="heroimg-container">
-      <img src="/media/V1 upscaled  copy.webp" alt="">
+      <img src="media/V1 upscaled  copy.webp" alt="">
     </div>
     <div class="hero-content">
       <h1>HEADER</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, tempora?</p>
-      <a href="/Contact/index.html">Contact now </a>
+      <a href="Contact/index.html">Contact now </a>
     </div>
      
   </section>
