--- a/Solar/index.html
+++ b/Solar/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lets Connect SA - Solar</title>
-    <link rel="stylesheet" href="css/LetsConnectsub.css">
+    <link rel="stylesheet" href="/Lets-Connect-Sa-Test-/css/LetsConnectsub.css">
+
     <link rel="stylesheet" href="css/LetsConnect.css">
     <link rel="stylesheet" href="https://use.typekit.net/uek8gvt.css">
 </head>
