--- a/Solar/index.html
+++ b/Solar/index.html
@@ -6,7 +6,8 @@
     <title>Lets Connect SA - Solar</title>
     <link rel="stylesheet" href="/Lets-Connect-Sa-Test-/css/LetsConnectsub.css">
 
-    <link rel="stylesheet" href="css/LetsConnect.css">
+    <link rel="stylesheet" href="/Lets-Connect-Sa-Test-/css/LetsConnect.css">
+
     <link rel="stylesheet" href="https://use.typekit.net/uek8gvt.css">
 </head>
 <body>
