--- a/Solar/index.html
+++ b/Solar/index.html
@@ -15,7 +15,8 @@
     <!-- Logo -->
     <div class="nav-left">
       <a href="/Index.html">
-      <img src="media/logo&branding/SVG/Asset 7.svg" alt="Logo" class="logo"></a>
+      <img src="/Lets-Connect-Sa-Test-/media/logo&branding/SVG/Asset 7.svg" alt="Logo" class="logo">
+
     </div>
 
     <!-- Navigation Links -->
