--- a/Solar/index.html
+++ b/Solar/index.html
@@ -227,7 +227,8 @@
   <div class="footer-container ">
     <!-- Logo + Contact -->
     <div class="footer-contact">
-      <img src="media/logo&branding/SVG/Footer logo.svg" alt="Company Logo" class="footer-logo">
+      <img src="/Lets-Connect-Sa-Test-/media/logo&branding/SVG/Footer logo.svg" alt="Company Logo" class="footer-logo">
+
       <p>04000000</p>
       <p>Email@email.com</p>
     </div>
