--- a/Security/index.html
+++ b/Security/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/uek8gvt.css">
 </head>
 <body>
-  <header class="custom-header hidden" id="mainHeader">
+<header class="custom-header hidden" id="mainHeader">
   <nav class="nav-bar container rounded-top-bottom">
     <!-- Logo -->
     <div class="nav-left">
@@ -48,7 +48,81 @@
             <ul>
               <!-- Social Links -->
               <li>
-                <a href="#"><img src="/Lets-Connect-Sa-Test-/media/icons/icons8-facebook.svg" alt="Facebook"><span>Facebook</
+                <a href="#"><img src="/Lets-Connect-Sa-Test-/media/icons/icons8-facebook.svg" alt="Facebook"><span>Facebook</span></a>
+              </li>
+              <li>
+                <a href="#"><img src="/Lets-Connect-Sa-Test-/media/icons/icons8-instagram.svg" alt="Instagram"><span>Instagram </span></a>
+              </li>
+
+              <!-- Contact Info -->
+              <li>
+                <img src="/Lets-Connect-Sa-Test-/media/icons/reshot-icon-phone-XVG9DMYSLJ (1).svg" alt="Phone Icon">
+                <span>P:0400000000</span>
+              </li>
+              <li>
+                <img src="/Lets-Connect-Sa-Test-/media/icons/reshot-icon-phone-XVG9DMYSLJ (1).svg" alt="Phone Icon">
+                <span>P:0400000000</span>
+              </li>
+              <li>
+                <img src="/Lets-Connect-Sa-Test-/media/icons/reshot-icon-email-P9WA8LS724.svg" alt="Email Icon">
+                <span>contact@Letsconnectsa.com</span>
+              </li>
+            </ul>
+          </div>
+
+          <div class="bgr-navigation">
+            <ul class="main-list">
+              <li><a href="#home">Home</a></li>
+              <li><a href="#About">About</a></li>
+              <li><a href="#Services">Services</a></li>
+              <li><a href="#Testimonial">Testimonial</a></li>
+              <li><a href="#Showcase">Showcases</a></li>
+            </ul>
+
+            <ul class="main-list">
+              <li>
+                Electricians
+                <ul class="sub-list">
+                  <li>header</li>
+                  <li>header</li>
+                  <li>header</li>
+                </ul>
+              </li>
+              <li>
+                Security
+                <ul class="sub-list">
+                  <li>header</li>
+                  <li>header</li>
+                </ul>
+              </li>
+              <li>
+                A/C
+                <ul class="sub-list">
+                  <li>header</li>
+                  <li>header</li>
+                </ul>
+              </li>
+              <li>
+                Data
+                <ul class="sub-list">
+                  <li>header</li>
+                  <li>header</li>
+                </ul>
+              </li>
+              <li>
+                Solar
+                <ul class="sub-list">
+                  <li>header</li>
+                  <li>header</li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </nav>
+</header>
 
 
 <main>
