--- a/AC/index.html
+++ b/AC/index.html
@@ -13,51 +13,58 @@
   <nav class="nav-bar container rounded-top-bottom">
     <!-- Logo -->
     <div class="nav-left">
-      <a href="/Index.html">
-      <img src="/Lets-Connect-Sa-Test-/media/logo&branding/SVG/Asset 7.svg" alt="Logo" class="logo">
-
+      <a href="/Lets-Connect-Sa-Test-/index.html">
+        <img src="/Lets-Connect-Sa-Test-/media/logo&branding/SVG/Asset 7.svg" alt="Logo" class="logo">
+      </a>
     </div>
 
     <!-- Navigation Links -->
     <ul class="nav-links">
-      <li><a href="/Electrical/index.html">Electrical</a></li>
-      <li><a href="/Security/index.html">Security</a></li>
-      <li><a href="/Data/index.html">Data</a></li>
-      <li><a href="/AC/index.html">A/C</a></li>
+      <li><a href="/Lets-Connect-Sa-Test-/Electrical/index.html">Electrical</a></li>
+      <li><a href="/Lets-Connect-Sa-Test-/Security/index.html">Security</a></li>
+      <li><a href="/Lets-Connect-Sa-Test-/Data/index.html">Data</a></li>
+      <li><a href="/Lets-Connect-Sa-Test-/AC/index.html">A/C</a></li>
+      <li><a href="/Lets-Connect-Sa-Test-/Solar/index.html">Solar</a></li>
     </ul>
 
     <!-- Contact Icons -->
     <div class="nav-icons">
-      <a href="/Contact/index.html" class="icon-link button-style" title="Contact Form">Contact</a>
-      <h3 class="icon-link">0400000000</h3>
+      <a href="/Lets-Connect-Sa-Test-/Contact/index.html" class="icon-link button-style" title="Contact Form">Contact</a>
+      <div class="contact-p-container">
+        <h3 class="icon-link">0400000000</h3>
+        <h3 class="icon-link">0400000000</h3>
+      </div>
     </div>
 
     <!-- Burger Icon (remains in nav bar) -->
     <div class="burger-menu" title="Menu">☰</div>
 
     <div class="menu-popup">
-      
       <div class="bgr">
         <div class="close-btn">×</div>
         <div class="bgr-content">
           <div class="bgr-contact">
-            <img class="bgr-logo" src="/media/logo&branding/SVG/Asset 7.svg" alt="">
+            <img class="bgr-logo" src="/Lets-Connect-Sa-Test-/media/logo&branding/SVG/Asset 7.svg" alt="">
             <ul>
               <!-- Social Links -->
               <li>
-                <a href="#"><img src="/Media/icons/icons8-facebook.svg" alt="Facebook"><span>Facebook</span></a>
+                <a href="#"><img src="/Lets-Connect-Sa-Test-/media/icons/icons8-facebook.svg" alt="Facebook"><span>Facebook</span></a>
               </li>
               <li>
-                <a href="#"><img src="/Media/icons/icons8-instagram.svg" alt="Instagram"><span>Instagram </span></a>
+                <a href="#"><img src="/Lets-Connect-Sa-Test-/media/icons/icons8-instagram.svg" alt="Instagram"><span>Instagram </span></a>
               </li>
 
               <!-- Contact Info -->
               <li>
-                <img src="/Media/icons/reshot-icon-phone-XVG9DMYSLJ (1).svg" alt="Phone Icon">
-                <span>04000000</span>
+                <img src="/Lets-Connect-Sa-Test-/media/icons/reshot-icon-phone-XVG9DMYSLJ (1).svg" alt="Phone Icon">
+                <span>P:0400000000</span>
               </li>
               <li>
-                <img src="/Media/icons/reshot-icon-email-P9WA8LS724.svg" alt="Email Icon">
+                <img src="/Lets-Connect-Sa-Test-/media/icons/reshot-icon-phone-XVG9DMYSLJ (1).svg" alt="Phone Icon">
+                <span>P:0400000000</span>
+              </li>
+              <li>
+                <img src="/Lets-Connect-Sa-Test-/media/icons/reshot-icon-email-P9WA8LS724.svg" alt="Email Icon">
                 <span>contact@Letsconnectsa.com</span>
               </li>
             </ul>
@@ -68,7 +75,8 @@
               <li><a href="#home">Home</a></li>
               <li><a href="#About">About</a></li>
               <li><a href="#Services">Services</a></li>
-              <li><a href="#Credentials">Credentials</a></li>
+              <li><a href="#Testimonial">Testimonial</a></li>
+              <li><a href="#Showcase">Showcases</a></li>
             </ul>
 
             <ul class="main-list">
@@ -96,6 +104,13 @@
               </li>
               <li>
                 Data
+                <ul class="sub-list">
+                  <li>header</li>
+                  <li>header</li>
+                </ul>
+              </li>
+              <li>
+                Solar
                 <ul class="sub-list">
                   <li>header</li>
                   <li>header</li>
