--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
   <div class="footer-container ">
     <!-- Logo + Contact -->
     <div class="footer-contact">
-      <img src="/media/logo&branding/SVG/Footer logo.svg" alt="Company Logo" class="footer-logo">
+      <img src="media/logo&branding/SVG/Footer logo.svg" alt="Company Logo" class="footer-logo">
       <p>04000000</p>
       <p>Email@email.com</p>
     </div>
