--- a/index.html
+++ b/index.html
@@ -182,6 +182,13 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, dignissimos.</p>
       </div>
       </a>
+      <a href="">
+      <div class="service-card">
+        <img src="" alt="">
+        <h3>Solar</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, dignissimos.</p>
+      </div>
+      </a>
     </div>
   </section>
 
