--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Lets Connect SA</title>
     <link rel="stylesheet" href="css/LetsConnect.css">
     <link rel="stylesheet" href="https://use.typekit.net/uek8gvt.css">
+    <link rel="icon" href="media/logo&branding/Favicon.svg/" type="image/svg+xml" />
 </head>
 <body>
   <header class="custom-header hidden" id="mainHeader">
