--- a/index.html
+++ b/index.html
@@ -155,35 +155,35 @@
   <section  class="services-section">
     <h2>Our Services</h2>
     <div class="service-cards">
-      <a href="">
+      <a href="Electrical/index.html">
       <div class="service-card">
         <img src="" alt="">
         <h3>Electrical</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, dignissimos.</p>
       </div>
       </a>
-      <a href="">
+      <a href="Security/index.html">
       <div class="service-card">
         <img src="" alt="">
         <h3>Security</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, dignissimos.</p>
       </div>
       </a>
-      <a href="">
+      <a href="Data/index.html">
       <div class="service-card">
         <img src="" alt="">
         <h3>Data</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, dignissimos.</p>
       </div>
       </a>
-      <a href="">
+      <a href="AC/index.html">
       <div class="service-card">
         <img src="" alt="">
         <h3>A/C</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, dignissimos.</p>
       </div>
       </a>
-      <a href="">
+      <a href="Solar/index.html">
       <div class="service-card">
         <img src="" alt="">
         <h3>Solar</h3>
