--- a/AC/index.html
+++ b/AC/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/Lets-Connect-Sa-Test-/css/LetsConnectsub.css">
     <link rel="stylesheet" href="/Lets-Connect-Sa-Test-/css/LetsConnect.css">
     <link rel="stylesheet" href="https://use.typekit.net/uek8gvt.css">
+    <link rel="icon" href="media/logo&branding/Favicon.svg" type="image/svg+xml" />
 </head>
 <body>
   <header class="custom-header hidden" id="mainHeader">
