--- a/Solar/index.html
+++ b/Solar/index.html
@@ -6,6 +6,7 @@
     <title>Lets Connect SA - Solar</title>
     <link rel="stylesheet" href="/Lets-Connect-Sa-Test-/css/LetsConnectsub.css">
     <link rel="stylesheet" href="/Lets-Connect-Sa-Test-/css/LetsConnect.css">
+     <link rel="icon" href="media/logo&branding/Favicon.svg" type="image/svg+xml" />
 
     <link rel="stylesheet" href="https://use.typekit.net/uek8gvt.css">
 </head>
